# checkers_core

./: .gitignore  Cargo.toml  build.sh  package-lock.json  package.json  readme.md  test.ts  tsconfig.json
benches/: bench.rs
bindings/: Color.ts  DrawType.ts  Figure.ts  GameState.ts  Piece.ts  Position.ts  PositionEnvironment.ts  StraightStrike.ts  Strike.ts
build-js/: gameProcess.d.ts  gameProcess.js  gameProcess.js.map  gameProcess.test.js
build-js/bindings/: BestPos.d.ts  PosState.d.ts  Position.d.ts  StraightStrike.d.ts  Strike.d.ts
build-wasm/: checkers_core.d.ts  checkers_core.js  checkers_core_bg.wasm  checkers_core_bg.wasm.d.ts
neural-learning/: game.ts  neuralGames.ts
src/: HashRcWrap.rs  Moves.rs  MovesList.rs  StraightStrike.rs  color.rs  game.rs  gameProcess.test.ts  gameProcess.ts  lib.rs  moves.rs  moves_list.rs  mutable_iterator.rs  piece.rs  position.rs  position_environment.rs  vector.rs
src/bindings/: BestPos.ts  PosState.ts  Position.ts  PositionHistoryItem.ts
src/rs/: HashRcWrap.rs  MThreadTest.rs  PositionHistory.rs  game.rs  lib.rs  main.rs  mcts.rs  moves.rs  moves_list.rs  piece.rs  position.rs  position_environment.rs
test/: gameProcess.test.ts
tests/: gameProcess.test.ts
ts/: board.ts  game.ts  gameProcess.ts  test.ts  tsconfig.json
