[package]
name = "lib1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]



[dependencies]
min-max = "0.1.8"
ts-rs = "6.2.1"
vec-option = "0.3.0"
js-sys = "0.3.60"
serde = { version = "1.0", features = ["derive", 'rc'] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.83"
rand = "0.8.5"
